--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@ body {
   h = window.innerHeight;
   w = window.innerWidth;
   ratio = h / w;
-  document.getElementsByClassName("clickMe")[0].style.top = ratio * 100 + 27 + "vw";
-  function adjust() {
+  document.getElementsByClassName("clickMe")[0].style.top = "0";
+  function {
     h = window.innerHeight;
     w = window.innerWidth;
     ratio = h / w;
-    document.getElementsByClassName("clickMe")[0].style.top = ratio * 100 + 27 + "vw";
+    document.getElementsByClassName("clickMe")[0].style.top = "0";
   }
   document.getElementById("info").style.top = 0;
   document.getElementById("info").style.top = 100 + "vh";
