--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
   w = window.innerWidth;
   ratio = h / w;
   document.getElementsByClassName("clickMe")[0].style.top = "0";
-  function {
+  function update() {
     h = window.innerHeight;
     w = window.innerWidth;
     ratio = h / w;
