--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="firstBack"></div>
 <img src="IMG_7775.png" class="center" id="logo">
 <img src="IMG_7843.png" class="info" id="info">
-<img src="Add a heading.zip - 1.png" class="clickMe">
+<img src="Add a heading.zip - 1.png" id="clickMe" class="clickMe">
 <img src="IMG_7842.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu"></div>
