--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      top: 0;
+      bottom: 0;
       left: 0;
   }
   .darken {
@@ -110,7 +110,6 @@ body {
   
 </style>
 <script>
-  document.getElementById("info").appendChild(document.getElementById("clickMe"));
   h = window.innerHeight;
   w = window.innerWidth;
   ratio = h / w;
