--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      bottom: 0;
-      left: 0;
+      bottom: 0vw;
+      left: 0vw;
   }
   .darken {
     pointer-events: none;
