--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     z-index: 175;
     width: 100vw;
     height: auto;
-    top: 85vh;
     left: 0;
     margin: 0;
     position: absolute;
@@ -43,7 +42,7 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      bottom: 0vw;
+      bottom: 0;
       left: 0vw;
   }
   .darken {
@@ -60,7 +59,7 @@
   }
   .menu {
     position: fixed;
-    height: 100%;
+    height: 100%; 
     width: 30%;
     left: 100%;
     top: 0;
