--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body id="body" onresize="adjust()" onload="fadeIn()"></body>
 <div class="firstBack"></div>
 <img src="IMG_7775.png" class="center" id="logo">
-<div class="info">
-  <img class="infoImg" id="info" src="IMG_7861.png">
+<div id="info" class="info">
+  <img class="infoImg" src="IMG_7861.png">
   <img src="Add a heading.zip - 1.png" id="clickMe" class="clickMe">
 </div>
 <img src="IMG_7842.png" class="floater" id="floater">
