--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      bottom: 0;
+      top: 357.5vw;
       left: 0vw;
   }
   .darken {
