--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <img src="IMG_7775.png" class="center" id="logo">
 <div id="info" class="info">
   <img class="infoImg" src="IMG_7861.png">
-  <img src="Add a heading.zip - 1.png" id="clickMe" class="clickMe">
+  <img src="Add a heading.zip - 1.png" style="left: 9.33vw" id="clickMe" class="clickMe">
+  <img src="Add a heading.zip - 2.png" style="left: 26.16vw" id="clickMe" class="clickMe">
+  <img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" class="clickMe">
+  <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" class="clickMe">
 </div>
 <img src="IMG_7842.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
@@ -42,8 +45,7 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      top: 367.5vw;
-      left: 0vw;
+      top: 367.vw;  
   }
   .darken {
     pointer-events: none;
