--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       height: auto;
       position: absolute;
       z-index: 175;
-      top: 367.vw;  
+      top: 367vw;  
   }
   .darken {
     pointer-events: none;
