--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <img src="Add a heading.zip - 2.png" style="left: 26.16vw" id="clickMe" class="clickMe">
   <img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" class="clickMe">
   <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" class="clickMe">
-  <img src="CLICK HERE!.png" style="left: 42.99vw" id="clickMe" class="clickMe2">
+  <img src="IMG_7868.png" style="left: 42.99vw" id="clickMe" class="clickMe2">
+  <img src="Add a heading.zip - 1.png" style="left: 9.33vw" id="clickMe" class="clickMeL">
+  <img src="Add a heading.zip - 2.png" style="left: 26.16vw" id="clickMe" class="clickMeL">
+  <img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" class="clickMeL">
+  <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" class="clickMeL">
 </div>
 <img src="IMG_7842.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
@@ -47,6 +51,13 @@
       position: absolute;
       z-index: 175;
       top: 368vw;  
+  }
+  .clickMeL {
+      width: 7.5vw;
+      height: auto;
+      position: absolute;
+      z-index: 175;
+      top: 30vw;  
   }
   .clickMe2 {
       width: 14vw;
