--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 </div>
 <img src="IMG_7842.png" class="floater" id="floater">
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
-<div class="menu" id="menu"></div>
+<div class="menu" id="menu">
+  <img class="pageLink" id="pl1" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 1">
+  <img class="pageLink" id="pl2" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 2">
+  <img class="pageLink" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3">
+  <img class="pageLink" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4">
+  <img class="pageLink" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5">
+  <img class="pageLink" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6">
+  <img class="pageLink" id="pl7" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 7">
+  <img class="pageLink" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8">
+</div>
 <img src="IMG_7822.png" class="darken" id="darken">
 
 
