--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ body {
       menuAt.style.left = 75 + "%";
       menu.style.left = 65 + "%";
       for (i = 0; i < 8; i++) {
-        document.getElementById("pl" + (i + 1).toString()).style.left: 72 + "%";
+        document.getElementById("pl" + (i + 1).toString()).style.left = 72 + "%";
       }
       bodyEl.classList.add('stop-scrolling');
       document.getElementById("darken").style.opacity = 1;
@@ -202,7 +202,7 @@ body {
       menuAt.style.left = 100 + "%";
       menu.style.left = 90 + "%";
       for (i = 0; i < 8; i++) {
-        document.getElementById("pl" + (i + 1).toString()).style.left: 102 + "%";
+        document.getElementById("pl" + (i + 1).toString()).style.left = 102 + "%";
       }
       bodyEl.classList.remove('stop-scrolling');
       document.getElementById("darken").style.opacity = 0;
