--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" class="clickMeL">
   <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" class="clickMeL">
   <iframe class="youTube"
-  src="https://www.youtube.com/embed/9keeDyFxzY4&t">
+  src="https://www.youtube.com/embed/9keeDyFxzY4">
   </iframe>
 </div>
 <img src="IMG_7842.png" class="floater" id="floater">
