--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="menu" id="menu">
   <a href="index.html"><img class="pageLink" style="top: 1vw;" id="pl1" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 1.png"></a>
   <a href="https://www.nrcaknights.com"><img class="pageLink" style="top: 6vw;" id="pl2" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 2.png"></a>
-  <img class="pageLink" style="top: 11vw;" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3.png">
+  <a href="fundraising.html"><img class="pageLink" style="top: 11vw;" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3.png"></a>
   <img class="pageLink" style="top: 16vw;" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4.png">
   <img class="pageLink" style="top: 21vw;" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5.png">
   <img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6.png">
