--- a/fundraising.html
+++ b/fundraising.html
@@ -1,5 +1,6 @@
 <video class="backDrop" autoplay loop>
   <source src="Video.mp4" type="video/mp4">
+  Your browser doesn't support HTML5 video tag.
 </video>
 <img src="Add a heading.png" class="info2">
 <style>
