--- a/fundraising.html
+++ b/fundraising.html
@@ -1,3 +1,4 @@
+<html><body>
 <video class="backDrop" autoplay loop>
   <source src="Video.mp4" type="video/mp4">
   <source src="Video.ogg" type="video/ogg">
@@ -28,3 +29,4 @@
     z-index: 20;
   }
 </style>
+</body></html>
