--- a/fundraising.html
+++ b/fundraising.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html><body>
 <video class="backDrop" autoplay loop>
   <source src="Video.mp4" type="video/mp4">
