--- a/fundraising.html
+++ b/fundraising.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html><body>
-<video class="backDrop" autoplay loop>
+<video autoplay loop>
   <source src="Video.mp4" type="video/mp4">
   <source src="Video.ogg" type="video/ogg">
   Your browser doesn't support HTML5 video tag.
 </video>
 <img src="Add a heading.png" class="info2">
 <style>
-  .backDrop {
+  video {
     position: fixed;
     top: 0;
     left: 0;
