--- a/fundraising.html
+++ b/fundraising.html
@@ -4,7 +4,7 @@
 <video autoplay loop>
   <source src="Video.mp4" type="video/mp4">
   <source src="Video.ogg" type="video/ogg">
-  Your browser doesn't support HTML5 video tag.
+  Your browser doesn't support the video tag.
 </video>
 <img src="Add a heading.png" class="info2">
 <style>
