--- a/fundraising.html
+++ b/fundraising.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<video class="water" autoplay="true" loop="loop">
+  <source src="Add a heading (1366 x 769 px.png" type="video/mp4">
+</video>
+<style>
+  .water {
+    height: 20%;
+    width: 100%;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  body { margin: 0; padding: 0; }
+</style>
 <html><body>
 </body></html>
