--- a/fundraising.html
+++ b/fundraising.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <video class="water" autoplay="true" loop="loop">
-  <source src="Add a heading (1366 x 769 px.mp4" type="video/mp4">
+  <source src="Add a heading (1366 x 769 px.mp4">
 </video>
 <style>
   .water {
