--- a/fundraising.html
+++ b/fundraising.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<video class="water" autoplay="true" loop="loop">
+<video class="water" autoplay loop muted>
   <source src="Add a heading (1366 x 769 px.mp4">
 </video>
 <style>
