--- a/fundraising.html
+++ b/fundraising.html
@@ -7,7 +7,7 @@
 </div>
 <style>
   .waterContainer {
-    height: 100%;
+    height: 45%;
     width: 100%;
     margin: 0;
     position: absolute;
@@ -15,6 +15,8 @@
     left: 0;
   }
   .water {
+    width: 100%;
+    height: 100%;
     min-height: 100%;
     min-width: 100%;
   }
