--- a/fundraising.html
+++ b/fundraising.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div class="waterContainer">
 <video class="water" autoplay loop muted>
-  <source src="Add a heading (1366 x 769 px.mp4">
+  <source src="Add a heading (1366 x 769 px.mov">
 </video>
-</div>
 <style>
-  .waterContainer {
-    height: 45%;
-    width: 100%;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
   .water {
     width: 100%;
-    height: 100%;
-    min-height: 100%;
-    min-width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+    margin: 0;
+    position: absolute;
   }
   body { margin: 0; padding: 0; }
 </style>
 <script>
-  document.getElementsByClassName("waterContainer")[0].appendChild(document.getElementsByClassName("water")[0]);
 </script>
 <html><body>
 </body></html>
