--- a/fundraising.html
+++ b/fundraising.html
@@ -3,8 +3,22 @@
 <video class="water" autoplay loop muted>
   <source src="Add a heading (1366 x 769 px.mov">
 </video>
+<div class="fundLogoCont"><img src="info.zip - 1.png" class="fundLogo"></div>
 <style>
+  .fundLogoCont {
+    width: 100%;
+    height: 45%;
+    left: 0;
+    top: 0;
+    z-Index: 1;
+  }
+  .fundLogo {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
   .water {
+    z-index: 0;
     width: 100%;
     height: auto;
     top: 0;
