--- a/fundraising.html
+++ b/fundraising.html
@@ -3,7 +3,7 @@
 <video class="water" autoplay loop muted>
   <source src="Add a heading (1366 x 769 px.mov">
 </video>
-<div class="fundLogoCont"><img src="info.zip - 1.png" class="fundLogo"></div>
+<div class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
 <style>
   .fundLogoCont {
     width: 100%;
@@ -16,6 +16,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    position: absolute;
   }
   .water {
     z-index: 0;
