--- a/fundraising.html
+++ b/fundraising.html
@@ -13,6 +13,8 @@
     z-Index: 1;
   }
   .fundLogo {
+    width: 80%;
+    height: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
