--- a/fundraising.html
+++ b/fundraising.html
@@ -4,7 +4,27 @@
   <source src="Add a heading (1366 x 769 px.mov">
 </video>
 <div class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
+<div class="info">
+  <img src="info.zip - 3.png" class="static">
+</div>
 <style>
+  .static {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+  }
+  .info {
+    width: 100%;
+    height: auto;
+    top: 45%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+  }
   .fundLogoCont {
     width: 100%;
     height: 45%;
