--- a/fundraising.html
+++ b/fundraising.html
@@ -6,8 +6,19 @@
 <div class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
 <div class="info">
   <img src="info.zip - 1.png" class="static">
+  <video class="tiers" autoplay loop muted>
+    <source src="silver.mp4">
+  </video>
 </div>
 <style>
+  .tiers {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: 0;
+    margin: 0;
+    top: 100vw;
+  }
   .static {
     width: 100%;
     height: auto;
