--- a/fundraising.html
+++ b/fundraising.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+<body onload="playVids()">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<video class="water" autoplay loop muted>
+<video id="water" class="water" loop muted>
   <source src="Add a heading (1366 x 769 px.mov">
 </video>
 <div class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
 <div class="info">
   <img src="info.zip - 1.png" class="static">
-  <video class="tiers" autoplay loop muted>
+  <video id="tiers" class="tiers" loop muted>
     <source src="silver.mp4">
   </video>
 </div>
@@ -63,6 +64,10 @@
   body { margin: 0; padding: 0; }
 </style>
 <script>
+  function playVids() {
+    document.getElementById("water").play();
+    document.getElementById("tiers").play();
+  }
 </script>
 <html><body>
 </body></html>
