--- a/fundraising.html
+++ b/fundraising.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body onload="playVids()">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<video id="water" class="water" loop muted>
+<video id="water" class="water" autoplay loop muted>
   <source src="Add a heading (1366 x 769 px.mov">
 </video>
 <div class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
@@ -65,7 +65,6 @@
 </style>
 <script>
   function playVids() {
-    document.getElementById("water").play();
     document.getElementById("tiers").play();
   }
 </script>
