--- a/fundraising.html
+++ b/fundraising.html
@@ -65,6 +65,7 @@
   body { margin: 0; padding: 0; }
 </style>
 <script>
+  document.getElementsByClassName("tiers")[0].play();
   document.getElementById("logo").style.opacity = 0;
   document.getElementById("logo").style.top = 35 + "%";
   document.getElementById("logo").style.opacity = 1;
