--- a/fundraising.html
+++ b/fundraising.html
@@ -63,13 +63,13 @@
     position: absolute;
   }
   body { margin: 0; padding: 0; }
-</style>
+</style> 
 <script>
   document.getElementsByClassName("tiers")[0].play();
   document.getElementById("logo").style.opacity = 0;
   document.getElementById("logo").style.top = 35 + "%";
   document.getElementById("logo").style.opacity = 1;
-  document.getElementById("logo").style.opacity = 25 + "%";
+  document.getElementById("logo").style.top = 25 + "%";
 </script>
 <html><body>
 </body></html>
