--- a/fundraising.html
+++ b/fundraising.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body onload="fadeIn()">
 <div class="water"></div>
-<div id="logo" class="fundLogoCont"><img src="info.zip - 3.png" class="fundLogo"></div>
+<div class="fundLogoCont"><img id="logo" src="info.zip - 3.png" class="fundLogo"></div>
 <div class="info">
   <img src="info.zip - 1.png" class="static">
   <video class="tiers" autoplay loop muted>
