--- a/fundraising.html
+++ b/fundraising.html
@@ -44,7 +44,7 @@
     z-Index: 1;
   }
   .fundLogo {
-    transition: 1s;
+    transition: opacity 1s top 1s;
     width: 80%;
     height: auto;
     top: 35%;
