--- a/fundraising.html
+++ b/fundraising.html
@@ -10,6 +10,18 @@
     <source src="silver.mp4" type="video/mp4" >
   </video>
 </div>
+<img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
+<div class="menu" id="menu">
+  <a href="index.html"><img class="pageLink" style="top: 1vw;" id="pl1" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 1.png"></a>
+  <a href="https://www.nrcaknights.com"><img class="pageLink" style="top: 6vw;" id="pl2" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 2.png"></a>
+  <a href="fundraising.html"><img class="pageLink" style="top: 11vw;" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3.png"></a>
+  <img class="pageLink" style="top: 16vw;" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4.png">
+  <img class="pageLink" style="top: 21vw;" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5.png">
+  <img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6.png">
+  <img class="pageLink" style="top: 31vw;" id="pl7" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 7.png">
+  <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
+</div>
+<img src="IMG_7822.png" class="darken" id="darken">
 <style>
   .tiers {
     width: 100%;
