--- a/fundraising.html
+++ b/fundraising.html
@@ -76,6 +76,51 @@
     margin: 0;
     position: absolute;
   }
+  .pageLink {
+    position: fixed;
+    width: 22%;
+    height: auto;
+    left: 102%;
+    margin: 0;
+    overflow-x: hidden;
+    transition: 0.3s;
+    z-index: 210;
+  }
+  .darken {
+    pointer-events: none;
+    z-index: -200;
+    opacity: 0;
+    transition: opacity 0.3s;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    top:0;
+    left:0;
+  }
+  .menu {
+    position: fixed;
+    height: 100%; 
+    width: 30%;
+    left: 100%;
+    top: 0;
+    margin: 0;
+    overflow-x: hidden;
+    transition: 0.3s;
+    z-index: 200;
+    background-image: url("IMG_7820.png");
+    background-size: cover;
+  }
+  .menuToggle {
+    position: fixed;
+    width: 10vw;
+    height: auto;
+    top: 0;
+    margin: 0;
+    left: 90vw;
+    transition: 0.3s;
+    z-index: 200;
+  }
   body { margin: 0; padding: 0; }
 </style> 
 <script>
