--- a/fundraising.html
+++ b/fundraising.html
@@ -5,7 +5,7 @@
 <div class="water"></div>
 <div class="fundLogoCont"><img id="logo" src="info.zip - 3.png" class="fundLogo"></div>
 <div class="info">
-  <img src="info.zip - 1.png" class="static">
+  <img src="IMG_7938.png" class="static">
   <video class="tiers" autoplay loop muted>
     <source src="silver.mp4" type="video/mp4" >
   </video>
