--- a/fundraising.html
+++ b/fundraising.html
@@ -7,8 +7,10 @@
 <div class="info">
   <img src="IMG_7938.png" class="static">
   <video class="tiers" autoplay loop muted>
-    <source src="silver.mp4" type="video/mp4" >
+    <source src="silver.mp4" type="video/mp4">
   </video>
+  <img src="IMG_7941.png" class="emailUs">
+  <img src="IMG_7942.png" class="fundMe">
 </div>
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu">
@@ -23,6 +25,16 @@
 </div>
 <img src="IMG_7822.png" class="darken" id="darken">
 <style>
+  .fundMe {
+    width: 15vw;
+    left: 42.5vw;
+    top: 460vw;
+  }
+  .emailUs {
+    width: 12vw;
+    left: 44vw;
+    top: 470vw;
+  }
   .tiers {
     width: 100%;
     height: auto;
