--- a/fundraising.html
+++ b/fundraising.html
@@ -29,8 +29,12 @@
     width: 15vw;
     left: 42.5vw;
     top: 460vw;
+    position: absolute;
+    z-index: 40;
   }
   .emailUs {
+    position: absolute;
+    z-index: 40;
     width: 12vw;
     left: 44vw;
     top: 470vw;
