--- a/fundraising.html
+++ b/fundraising.html
@@ -26,18 +26,20 @@
 <img src="IMG_7822.png" class="darken" id="darken">
 <style>
   .fundMe {
-    width: 15vw;
+    width: 24vw;
+    height: auto;
     left: 42.5vw;
-    top: 460vw;
+    top: 430vw;
     position: absolute;
     z-index: 40;
   }
   .emailUs {
     position: absolute;
     z-index: 40;
-    width: 12vw;
+    width: 30vw;
+    height: auto;
     left: 44vw;
-    top: 470vw;
+    top: 460vw;
   }
   .tiers {
     width: 100%;
