--- a/fundraising.html
+++ b/fundraising.html
@@ -17,10 +17,10 @@
   <a href="index.html"><img class="pageLink" style="top: 1vw;" id="pl1" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 1.png"></a>
   <a href="https://www.nrcaknights.com"><img class="pageLink" style="top: 6vw;" id="pl2" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 2.png"></a>
   <a href="fundraising.html"><img class="pageLink" style="top: 11vw;" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3.png"></a>
-  <img class="pageLink" style="top: 16vw;" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4.png">
-  <img class="pageLink" style="top: 21vw;" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5.png">
-  <img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6.png">
-  <img class="pageLink" style="top: 31vw;" id="pl7" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 7.png">
+  <a href="https://youtube.com/@nrcarobotics?si=PTQOen2TCSb-2hhx"><img class="pageLink" style="top: 16vw;" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4.png"></a>
+  <a href="instagram.com/nrcaknightsrobotics"><img class="pageLink" style="top: 21vw;" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5.png"></a>
+  <a href="https://www.gofundme.com/f/christian-robotics-club-team-8746-knights"><img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6.png"></a>
+  <a href="mailto: zdean@nrcaknights.com"><img class="pageLink" style="top: 31vw;" id="pl7" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 7.png"></a>
   <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
 </div>
 <img src="IMG_7822.png" class="darken" id="darken">
