--- a/fundraising.html
+++ b/fundraising.html
@@ -9,8 +9,8 @@
   <video class="tiers" autoplay loop muted>
     <source src="silver.mp4" type="video/mp4">
   </video>
-  <img src="IMG_7941.png" class="emailUs">
-  <img src="IMG_7942.png" class="fundMe">
+  <a href="mailto: zdean@nrcaknights.com"><img src="IMG_7941.png" class="emailUs"></a>
+  <a href="https://www.gofundme.com/f/christian-robotics-club-team-8746-knights"><img src="IMG_7942.png" class="fundMe"></a>
 </div>
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu">
