--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@ window.addEventListener("scroll", function(){
     parallax(); 
 });
   function popUp() {
-    document.getElementById("popUp").zIndex = 300;
-    document.getElementById("popUp").opacity = 1;
+    document.getElementById("popUp").style.zIndex = 300;
+    document.getElementById("popUp").style.opacity = 1;
   }
   function unPopUp() {
-    document.getElementById("popUp").zIndex = -400;
-    document.getElementById("popUp").opacity = 0;
+    document.getElementById("popUp").style.zIndex = -400;
+    document.getElementById("popUp").style.opacity = 0;
   }
   /*
 window.addEventListener("scroll", function() {
