--- a/index.html
+++ b/index.html
@@ -33,19 +33,21 @@
   <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
 </div>
 <img src="IMG_7822.png" class="darken" id="darken">
-<a href="https://give.cornerstone.cc/nrcaknights" onclick="unPopUp()"><div id="popUp" class="popUp"></div></a>
+<div onclick="unPopUp()" id="popUp" class="popUp"></div>
 
 
 </div>
 <style>
   .popUp {
-    position: fixed;
-    width: 100%;
-    height: 100%;
     background-image: url("IMG_8127.png");
     background-position: 50%;
     background-size: cover;
-    z-index: -400;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -4000;
     opacity: 0;
   }
   .youTube {
@@ -251,11 +253,11 @@ window.addEventListener("scroll", function(){
     parallax(); 
 });
   function popUp() {
-    document.getElementById("popUp").style.zIndex = 300;
+    document.getElementById("popUp").style.zIndex = "300";
     document.getElementById("popUp").style.opacity = 1;
   }
   function unPopUp() {
-    document.getElementById("popUp").style.zIndex = -400;
+    document.getElementById("popUp").style.zIndex = "-400";
     document.getElementById("popUp").style.opacity = 0;
   }
   /*
