--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
 </div>
 <img src="IMG_7822.png" class="darken" id="darken">
-<div onclick="unPopUp()" id="popUp" class="popUp"></div>
+<a href="https://give.cornerstone.cc/nrcaknights"><div onclick="unPopUp()" id="popUp" class="popUp"></div></a>
 
 
 </div>
