--- a/fundraising.html
+++ b/fundraising.html
@@ -24,6 +24,7 @@
   <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
 </div>
 <img src="IMG_7822.png" class="darken" id="darken">
+<a href="https://give.cornerstone.cc/nrcaknights"><div onclick="unPopUp()" id="popUp" class="popUp"></div></a>
 <style>
   .fundMe {
     width: 24vw;
