--- a/fundraising.html
+++ b/fundraising.html
@@ -26,6 +26,18 @@
 <img src="IMG_7822.png" class="darken" id="darken">
 <a href="https://give.cornerstone.cc/nrcaknights"><div onclick="unPopUp()" id="popUp" class="popUp"></div></a>
 <style>
+  .popUp {
+    background-image: url("IMG_8136.png");
+    background-position: 50%;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -4000;
+    opacity: 0;
+  }
   .fundMe {
     width: 24vw;
     height: auto;
