--- a/fundraising.html
+++ b/fundraising.html
@@ -201,5 +201,13 @@
       phase -= 1;
     }
   }
+  function popUp() {
+    document.getElementById("popUp").style.zIndex = "300";
+    document.getElementById("popUp").style.opacity = 1;
+  }
+  function unPopUp() {
+    document.getElementById("popUp").style.zIndex = "-400";
+    document.getElementById("popUp").style.opacity = 0;
+  }
 </script>
 </body></html>
