--- a/fundraising.html
+++ b/fundraising.html
@@ -10,7 +10,7 @@
     <source src="silver.mp4" type="video/mp4">
   </video>
   <a href="mailto: zdean@nrcaknights.com"><img src="IMG_7941.png" class="emailUs"></a>
-  <a href="https://www.gofundme.com/f/christian-robotics-club-team-8746-knights"><img src="IMG_7942.png" class="fundMe"></a>
+  <img src="IMG_7942.png" onclick="popUp()" class="fundMe">
 </div>
 <img class="menuToggle" id="menuToggler" src="IMG_7803.png" onclick="toggle()">
 <div class="menu" id="menu">
