--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <a href="mailto: zdean@nrcaknights.com"><img src="Add a heading.zip - 1.png" style="left: 9.33vw" id="clickMe" class="clickMe"></a>
   <a href="https://youtube.com/@nrcarobotics?si=PTQOen2TCSb-2hhx"><img src="Add a heading.zip - 2.png" style="left: 26.16vw" id="clickMe" class="clickMe"></a>
   <a href="https://instagram.com/nrcaknightsrobotics"><img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" onclick="popUp()" class="clickMe"></a>
-  <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" onclick="popUp()" class="clickMe">
+  <img src="Add a heading.png" style="left: 83.15vw" id="clickMe" onclick="popUp()" class="clickMe">
   <a href="fundraising.html"><img src="IMG_7868.png" style="left: 42.99vw" id="clickMe" class="clickMe2"></a>
   <a href="mailto: zdean@nrcaknights.com"><img src="Add a heading.zip - 1.png" style="left: 9.33vw" id="clickMe" class="clickMeL"></a>
   <a href="https://youtube.com/@nrcarobotics?si=PTQOen2TCSb-2hhx"><img src="Add a heading.zip - 2.png" style="left: 26.16vw" id="clickMe" class="clickMeL"></a>
   <a href="https://instagram.com/nrcaknightsrobotics"><img src="Add a heading.zip - 3.png" style="left: 66.32vw" id="clickMe" class="clickMeL"></a>
-  <img src="Add a heading.zip - 4.png" style="left: 83.15vw" id="clickMe" onclick="popUp()" class="clickMeL">
+  <img src="Add a heading.png" style="left: 83.15vw" id="clickMe" onclick="popUp()" class="clickMeL">
   <iframe class="youTube"
   src="https://www.youtube.com/embed/9keeDyFxzY4">
   </iframe>
