--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <a href="fundraising.html"><img class="pageLink" style="top: 11vw;" id="pl3" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 3.png"></a>
   <a href="https://youtube.com/@nrcarobotics?si=PTQOen2TCSb-2hhx"><img class="pageLink" style="top: 16vw;" id="pl4" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 4.png"></a>
   <a href="https://instagram.com/nrcaknightsrobotics"><img class="pageLink" style="top: 21vw;" id="pl5" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 5.png"></a>
-  <img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 6.png" onclick="popUp()">
+  <img class="pageLink" style="top: 26vw;" id="pl6" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px).png" onclick="popUp()">
   <a href="mailto: zdean@nrcaknights.com"><img class="pageLink" style="top: 31vw;" id="pl7" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 7.png"></a>
   <img class="pageLink" style="bottom: 1vw;" id="pl8" src="CLICK HERE! (1400 x 700 px) (1400 x 360 px) - 8.png">
 </div>
